<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.arch.vaani.ocr.LanguageActivity" >

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/language_arrays"
        android:prompt="@string/language_prompt"
        android:textSize="20pt"  
        android:background="#0099CC"
        android:popupBackground="#33ADD6"
         />

    <ImageView
        android:id="@+id/view_photo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/camera" />

    <Button
        android:id="@+id/button4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:text="@string/sub"
        android:background="@drawable/button1"
        android:textSize="20sp" />

</LinearLayout>