<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.arch.vaani.ocr.SecondActivity" >

   <ImageView
        android:id="@+id/view_photo"
        android:layout_width="272dp"
        android:layout_height="277dp"
        android:layout_weight="0.40"
        android:contentDescription="@string/camera" />

   <AbsoluteLayout
       	android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:orientation="horizontal"
       	android:visibility="visible" >
        <Button
           android:id="@+id/button4"
           style="?android:attr/buttonStyleSmall"
           android:layout_width="100dp"
           android:layout_height="wrap_content"
           android:background="@drawable/button1"
           android:text="@string/nex"
           android:textColor="#000000"
           android:textSize="20sp"
           android:layout_x="175dp" 
           android:layout_y="30dp"/>
        
        <Button
        	android:id="@+id/button3"
        	style="?android:attr/buttonStyleSmall"
        	android:layout_width="120dp"
        	android:layout_height="wrap_content"
        	android:background="@drawable/button1"
        	android:text="@string/sel"
        	android:textColor="#000000"
        	android:textSize="20sp" 
        	android:layout_x="5dp"
        	android:layout_y="30dp"/>

	</AbsoluteLayout>
</LinearLayout>